--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "dockerode": "^3.2.1",
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
+    "lodash": "^4.17.20",
+    "sockjs": "^0.3.21",
+    "sortablejs": "^1.13.0",
     "vue": "^2.6.11",
     "vue-easy-dnd": "^1.10.2",
     "vue-router": "^3.2.0",
+    "vue-sortable": "^0.1.3",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
