--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-sortable": "^0.1.3",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
