--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
     "lodash": "^4.17.20",
+    "memory-streams": "^0.1.3",
+    "path": "^0.12.7",
+    "slash": "^3.0.0",
     "sockjs": "^0.3.21",
     "sortablejs": "^1.13.0",
     "vue": "^2.6.11",
