--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "slash": "^3.0.0",
     "sockjs": "^0.3.21",
     "sortablejs": "^1.13.0",
+    "sweetalert2": "^10.15.5",
     "vue": "^2.6.11",
     "vue-easy-dnd": "^1.10.2",
     "vue-router": "^3.2.0",
