--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "dockerode": "^3.2.1",
+    "dockerode-utils": "^0.0.7",
     "envfile": "^6.14.0",
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
