--- a/image_development/Dockerfile
+++ b/image_development/Dockerfile
@@ -1,4 +1,12 @@
-FROM ubuntu:20.10
-RUN apt-get update -y
-RUN apt-get install zlib1g bzip2 pigz -y
-RUN apt-get install vsearch -y
+FROM alpine:3.10
+
+RUN apk add build-base \
+    && apk add R \
+    && apk add R-dev  \
+    && apk add linux-headers  \
+    && apk add libjpeg-turbo-dev \
+    && wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz  \
+	&& tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
+ADD image_development/dada2_install.R /
+RUN Rscript dada2_install.R 
+RUN apk del R-dev && apk del build-base
