--- a/image_development/Dockerfile_dada2
+++ b/image_development/Dockerfile_dada2
@@ -1,13 +1,13 @@
 FROM alpine:3.10
 
-RUN apk add build-base && apk add R && apk add R-dev && apk add linux-headers && apk add libjpeg-turbo-dev
-ADD ImageDevelopment/dada2_install.R /
-RUN Rscript dada2_install.R
-
-# dada2_install.R contents:
-# install.packages("Rcpp" ,repos = "http://cran.us.r-project.org")
-# if (!requireNamespace("BiocManager", quietly = TRUE))
-#     install.packages("BiocManager" ,repos = "http://cran.us.r-project.org")
-# BiocManager::install("dada2", version = "3.10")
-
+RUN apk add build-base \
+    && apk add R \
+    && apk add R-dev  \
+    && apk add linux-headers  \
+    && apk add libjpeg-turbo-dev \
+    && wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz  \
+	&& tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
+ADD image_development/dada2_install.R /
+RUN Rscript dada2_install.R 
 RUN apk del R-dev && apk del build-base
+
