--- a/image_development/Dockerfile
+++ b/image_development/Dockerfile
@@ -1,12 +1,14 @@
 FROM alpine:3.10
 
 RUN apk add build-base \
-    && apk add R \
-    && apk add R-dev  \
-    && apk add linux-headers  \
-    && apk add libjpeg-turbo-dev \
+    && apk add automake \
+    && apk add autoconf  \
+    && apk add wget  \
+    && apk add git  \
+    && apk add zlib-dev \
+    && apk add bzip2-dev \
     && wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz  \
-	&& tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
-ADD image_development/dada2_install.R /
-RUN Rscript dada2_install.R 
-RUN apk del R-dev && apk del build-base
+    && tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz \
+    && git clone https://github.com/torognes/vsearch.git \
+    && cd vsearch && ./autogen.sh && ./configure && make && make install
+RUN apk del git && apk del wget
