--- a/image_development/Dockerfile_vsearch
+++ b/image_development/Dockerfile_vsearch
@@ -1,4 +1,14 @@
-FROM ubuntu:20.10
-RUN apt-get update -y
-RUN apt-get install zlib1g bzip2 pigz -y
-RUN apt-get install vsearch -y
+FROM alpine:3.10
+
+RUN apk add build-base \
+    && apk add automake \
+    && apk add autoconf  \
+    && apk add wget  \
+    && apk add git  \
+    && apk add zlib-dev \
+    && apk add bzip2-dev \
+    && wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz  \
+    && tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz \
+    && git clone https://github.com/torognes/vsearch.git \
+    && cd vsearch && ./autogen.sh && ./configure && make && make install
+RUN apk del git && apk del wget
