--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
-    "vuex-map-fields": "^1.4.1"
+    "vuex-map-fields": "^1.4.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
