tooltip style, vsearch parallel

--- a/image_development/Dockerfile_vsearch
+++ b/image_development/Dockerfile_vsearch
@@ -2,6 +2,7 @@ FROM alpine:3.14
 
 RUN apk add build-base \
     && apk add automake \
+    && apk add parallel \
     && apk add --no-cache --upgrade grep \
     && apk add autoconf  \
     && apk add pigz  \
