swalfire:workflow finished, update for save and load workflows(now work on any custom workflow as well)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Pipecraft",
   "productName": "pipecraft",
-  "version": "0.2.0beta",
+  "version": "0.2.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
