--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@electron/remote": "^2.0.1",
     "core-js": "^3.6.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "^0.0.7",
@@ -45,7 +46,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "electron": "^9.0.0",
+    "electron": "^15.3.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
