--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "core-js": "^3.6.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "^0.0.7",
+    "electron-rebuild": "^3.2.5",
     "envfile": "^6.14.0",
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
     "lodash": "^4.17.21",
     "memory-streams": "^0.1.3",
+    "node-pty": "^0.10.1",
     "path": "^0.12.7",
     "slash": "^3.0.0",
     "sockjs": "^0.3.21",
@@ -35,7 +37,9 @@
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "vuex-map-fields": "^1.4.1",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "xterm": "^4.15.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
