tweaks to swal alerts

--- a/image_development/Dockerfile_dada2
+++ b/image_development/Dockerfile_dada2
@@ -2,6 +2,7 @@ FROM alpine:3.10
 
 RUN apk add build-base \
     && apk add R \
+    && apk add pigz \
     && apk add R-dev  \
     && apk add linux-headers  \
     && apk add libjpeg-turbo-dev \
