--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs-promise": "^2.0.3",
     "lodash": "^4.17.21",
     "memory-streams": "^0.1.3",
+    "node-gyp": "^8.4.1",
     "node-pty": "^0.10.1",
     "path": "^0.12.7",
     "slash": "^3.0.0",
