--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Pipecraft",
+  "name": "pipecraft",
   "productName": "pipecraft",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,35 +12,30 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
-    "@electron/remote": "^2.0.1",
     "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0",
+    "vuedraggable": "^2.24.3",
+    "@electron/remote": "^2.0.1",
     "dockerode": "^3.2.1",
     "dockerode-utils": "^0.0.7",
-    "electron-rebuild": "^3.2.5",
+    "sweetalert2": "^10.15.5",
+    "memory-streams": "^0.1.3",
+    "xterm": "^4.15.0",
+    "xterm-addon-fit": "^0.5.0",
+    "node-pty": "^0.10.1",
+    "path": "^0.12.7",
+    "slash": "^3.0.0",
     "envfile": "^6.14.0",
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
     "lodash": "^4.17.21",
-    "memory-streams": "^0.1.3",
-    "node-gyp": "^8.4.1",
-    "node-pty": "^0.10.1",
-    "path": "^0.12.7",
-    "slash": "^3.0.0",
-    "sockjs": "^0.3.21",
-    "sortablejs": "^1.13.0",
-    "sweetalert2": "^10.15.5",
-    "vue": "^2.6.11",
-    "vue-easy-dnd": "^1.10.2",
-    "vue-router": "^3.2.0",
-    "vue-sortable": "^0.1.3",
-    "vuedraggable": "^2.24.3",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.4.0",
-    "vuex-map-fields": "^1.4.1",
-    "vuex-router-sync": "^5.0.0",
-    "xterm": "^4.15.0",
-    "xterm-addon-fit": "^0.5.0"
+    "sockjs": "^0.3.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -50,18 +45,37 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "electron": "^15.3.0",
+    "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
-    "vue-cli-plugin-vuetify": "^2.0.9",
-    "vue-devtools": "^5.1.4",
+    "prettier": "^2.2.1",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-cli-plugin-vuetify": "~2.4.4",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  }
+    "vuetify-loader": "^1.7.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
