--- a/image_development/Dockerfile_demux
+++ b/image_development/Dockerfile_demux
@@ -13,7 +13,8 @@ RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_li
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 RUN python3 get-pip.py
 RUN python3 -m pip install cutadapt
-RUN wget https://github.com/shenwei356/seqkit/releases/download/v0.15.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz && \
+RUN pip install biopython
+RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz && \
 	tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
 RUN apt-get remove wget -y curl -y
 
