removed bugged default tooltip

--- a/image_development/Dockerfile_cutadapt
+++ b/image_development/Dockerfile_cutadapt
@@ -12,7 +12,7 @@ RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_li
  	tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 RUN python3 get-pip.py
-RUN python3 -m pip install cutadapt
+RUN python3 -m pip install cutadapt==3.5
 RUN pip install biopython
 RUN apt-get remove wget -y curl -y
 
