--- a/image_development/Dockerfile_cutadapt
+++ b/image_development/Dockerfile_cutadapt
@@ -5,6 +5,7 @@ RUN apt-get update -y
 RUN apt-get install bc -y
 RUN apt-get install build-essential -y
 RUN apt-get install python3-dev -y
+RUN python3 -m pip install biopython
 RUN apt-get install curl -y
 RUN apt-get install pigz -y
 RUN apt-get install wget -y
@@ -13,6 +14,5 @@ RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_li
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 RUN python3 get-pip.py
 RUN python3 -m pip install cutadapt==3.5
-RUN pip install biopython
 RUN apt-get remove wget -y curl -y
 
