--- a/image_development/Dockerfile_ITSx
+++ b/image_development/Dockerfile_ITSx
@@ -3,8 +3,8 @@ FROM ubuntu:20.10
 
 RUN apt-get update -y
 RUN apt-get install build-essential -y
-RUN python3 get-pip.py
 RUN apt-get install python3-dev -y
+RUN apt-get install python3-pip -y
 RUN python3 -m pip install biopython
 RUN apt-get install pigz -y
 RUN apt-get install wget -y
