--- a/image_development/Dockerfile_cutadapt
+++ b/image_development/Dockerfile_cutadapt
@@ -5,6 +5,7 @@ RUN apt-get update -y
 RUN apt-get install bc -y
 RUN apt-get install build-essential -y
 RUN apt-get install python3-dev -y
+RUN apt-get install python3-pip -y
 RUN python3 -m pip install biopython
 RUN apt-get install curl -y
 RUN apt-get install pigz -y
