--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
   },
   "main": "background.js",
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "vuex-router-sync": "^5.0.0",
-    "vuedraggable": "^2.24.3",
     "@electron/remote": "^2.0.1",
+    "core-js": "^3.6.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "^0.0.7",
-    "sweetalert2": "^10.15.5",
-    "memory-streams": "^0.1.3",
-    "xterm": "^4.15.0",
-    "xterm-addon-fit": "^0.5.0",
-    "node-pty": "^0.10.1",
-    "path": "^0.12.7",
-    "slash": "^3.0.0",
     "envfile": "^6.14.0",
     "fs": "^0.0.1-security",
     "fs-promise": "^2.0.3",
     "lodash": "^4.17.21",
-    "sockjs": "^0.3.21"
+    "memory-streams": "^0.1.3",
+    "node-pty": "^0.10.1",
+    "path": "^0.12.7",
+    "slash": "^3.0.0",
+    "sockjs": "^0.3.21",
+    "sweetalert2": "^10.15.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0",
+    "xterm": "^4.15.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -45,6 +45,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "dmg-license": "^1.0.10",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
