--- a/image_development/Dockerfile_dada2
+++ b/image_development/Dockerfile_dada2
@@ -1,15 +1,18 @@
-FROM ubuntu:20.04
-ARG DEBIAN_FRONTEND=noninteractive
-
+FROM ubuntu:22.04
+#ARG DEBIAN_FRONTEND=noninteractive
+ENV TZ=Europe/Tallinn
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update -y
 RUN apt-get install build-essential -y
 RUN apt-get install pigz -y
 RUN apt-get install wget -y
 RUN apt-get install r-base-dev -y
+RUN apt-get install r-base -y
 RUN apt-get install libcurl4-gnutls-dev  -y
 RUN apt-get install libxml2-dev -y
 RUN apt-get install libssl-dev -y
 RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz && \
     tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
+RUN wget https://github.com/tobiasgf/lulu/archive/refs/heads/master.zip
 ADD image_development/dada2_install.R /
 RUN Rscript dada2_install.R
