--- a/image_development/Dockerfile
+++ b/image_development/Dockerfile
@@ -1,6 +1,8 @@
-FROM conda/miniconda3
+FROM conda/miniconda3:latest
 RUN apt-get update -y
 RUN apt-get install build-essential -y
 RUN pip install --upgrade numpy
-RUN conda install -c conda-forge deicode
 RUN pip install biom-format
+RUN conda update --all
+RUN conda install -c conda-forge deicode
+RUN conda install -c qiime2 qiime2
