Stop button design, kill + remove container, SE_PE_toggle in runWorkflow, QC button disable rules and tips

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipecraft",
+  "name": "pipecraft_0.1.1",
   "productName": "pipecraft",
   "version": "0.1.1",
   "private": true,
@@ -45,13 +45,12 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "dmg-license": "^1.0.10",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^2.2.1",
+    "prettier": "2.6.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
