update QIIME2 and DEICODE image

--- a/image_development/Dockerfile_deicode
+++ b/image_development/Dockerfile_deicode
@@ -1,14 +1,15 @@
 FROM conda/miniconda3:latest
-RUN conda update --all -y
-RUN conda install -y -c conda-forge mamba
-RUN mamba install -y -c conda-forge -c qiime2 python=3.8 qiime2=2022.2.0
-RUN mamba install  -y -c conda-forge deicode=0.2.4 biom-format=2.1.12
-RUN apt-get update -y 
-RUN apt-get install wget -y
-RUN apt-get install r-base -y
-RUN wget -O /usr/local/lib/python3.8/site-packages/deicode/rpca.py https://raw.githubusercontent.com/SuvalineVana/pipecraft/main/src/pipecraft-core/service_scripts/rpca.py
-RUN wget -O /usr/local/lib/python3.8/site-packages/deicode/scripts/_standalone_rpca.py https://raw.githubusercontent.com/SuvalineVana/pipecraft/main/src/pipecraft-core/service_scripts/_standalone_rpca.py
-RUN conda clean --all --yes
-RUN apt remove wget -y
-RUN apt-get clean
-RUN R -e "install.packages('optparse', dependencies=TRUE, repos='http://cran.rstudio.com/')"
+
+RUN apt-get update -y \
+  && apt-get install wget -y \
+  && conda install -y -c conda-forge mamba \
+  && wget https://data.qiime2.org/distro/core/qiime2-2022.2-py38-linux-conda.yml \
+  && mamba env update -n base --file qiime2-2022.2-py38-linux-conda.yml \
+  && mamba install -n base -y -c conda-forge deicode=0.2.4 \
+  && wget -O /usr/local/lib/python3.8/site-packages/deicode/rpca.py https://raw.githubusercontent.com/SuvalineVana/pipecraft/main/src/pipecraft-core/service_scripts/rpca.py \
+  && wget -O /usr/local/lib/python3.8/site-packages/deicode/scripts/_standalone_rpca.py https://raw.githubusercontent.com/SuvalineVana/pipecraft/main/src/pipecraft-core/service_scripts/_standalone_rpca.py \
+  && R -e "install.packages('optparse', dependencies=TRUE, repos='http://cran.rstudio.com/')" \
+  && conda clean --all --yes \
+  && apt remove wget -y \
+  && apt-get clean \
+  && rm qiime2-2022.2-py38-linux-conda.yml
