--- a/image_development/Dockerfile_metaworks
+++ b/image_development/Dockerfile_metaworks
@@ -22,3 +22,6 @@ RUN wget ftp://ftp.ncbi.nlm.nih.gov/genomes/TOOLS/ORFfinder/linux-i64/ORFfinder.
 RUN gunzip ORFfinder.gz
 RUN chmod 755 ORFfinder
 RUN mv ORFfinder /bin/.
+RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.0.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz && \
+    tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
+
