--- a/image_development/Dockerfile_cutadapt
+++ b/image_development/Dockerfile_cutadapt
@@ -1,10 +1,11 @@
-FROM ubuntu:20.10
+FROM ubuntu:22.04
 # ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y
 RUN apt-get install bc -y
 RUN apt-get install build-essential -y
 RUN apt-get install python3-dev -y
+RUN apt-get update -y
 RUN apt-get install python3-pip -y
 RUN python3 -m pip install biopython
 RUN apt-get install curl -y
