--- a/image_development/Dockerfile_vsearch
+++ b/image_development/Dockerfile_vsearch
@@ -1,6 +1,7 @@
 FROM ubuntu:22.04
 # ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -y
+RUN apt-get install parallel
 RUN apt-get install build-essential -y
 RUN apt-get install wget -y
 RUN apt-get install pigz -y
