--- a/image_development/Dockerfile_fastp
+++ b/image_development/Dockerfile_fastp
@@ -1,5 +1,7 @@
 FROM alpine:3.14
 
+RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.3.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz  \
+    && tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
 RUN apk add build-base \
     && apk add parallel \
     && apk add --no-cache --upgrade grep \
