--- a/image_development/Dockerfile_vsearch_dada2_v1
+++ b/image_development/Dockerfile_vsearch_dada2_v1
@@ -8,20 +8,19 @@ RUN apt-get install build-essential -y
 RUN apt-get install wget -y
 RUN apt-get install pigz -y
 RUN apt-get install git -y
-RUN apt-get install bc
 RUN apt-get install r-base -y
-RUN apt-get install r-base-dev -y
-RUN apt-get install autoconf -y
+RUN apt-get install ncbi-blast+ -y
 RUN wget https://github.com/shenwei356/seqkit/releases/download/v2.3.0/seqkit_linux_amd64.tar.gz -O /tmp/seqkit.tar.gz && \
     tar zxvf /tmp/seqkit.tar.gz -C /usr/bin/ && rm /tmp/seqkit.tar.gz
+RUN apt-get install autoconf -y
 RUN git clone --branch v2.22.1 https://github.com/torognes/vsearch.git \
     && cd vsearch && ./autogen.sh && ./configure && make && make install
 RUN Rscript -e 'install.packages("data.table", dependencies=TRUE , repos="https://cloud.r-project.org")'
 RUN Rscript -e 'install.packages("optparse", repos="https://cloud.r-project.org")'
-RUN apt-get install libcurl4-gnutls-dev  -y
-RUN apt-get install libxml2-dev -y
-RUN apt-get install libssl-dev -y
-RUN wget https://github.com/tobiasgf/lulu/archive/refs/heads/master.zip
-ADD image_development/dada2_install.R /
-RUN Rscript dada2_install.R
-RUN apt-get install ncbi-blast+ -y
+RUN Rscript -e 'install.packages("dplyr", repos = "https://cloud.r-project.org/" )'
+RUN Rscript -e 'install.packages("remotes", repos = "https://cloud.r-project.org/")'
+RUN Rscript -e 'install.packages("BiocManager", repos = "https://cloud.r-project.org/")'
+RUN Rscript -e 'remotes::install_github("tobiasgf/lulu")'
+RUN Rscript -e 'remotes::install_github("benjjneb/dada2", ref="v1.20")'
+
+
